--- a/index.html
+++ b/index.html
@@ -44,7 +44,11 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your JavaScript notes here</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>JavaScript is a powerful programming language that can add interactivity to a website.</li>
+          <li>Array is a structure that allow you to store multiple values in a single reference.</li>
+          <li>The order of code affects the outcome.</li>
         </ul>
       </section>
     </main>
